
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.4.5 WIP
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.5

Fixes:
- Tabs:      Fixed issue with items on tabs not lining up when using same_line
- Stub file: add_logger added to stub file
- Plots:     reset_yticks was resetting x ticks

-----------------------------------------------------------------------
 VERSION 0.4.4 (10/4/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.4

Breaking Changes:
- Selectable:     changed "disabled" keyword to "enabled"

New Commands:
- Items:          Added "move_item" command
- Logger:         Added "add_logger" command

Changes:
- Examples:       Moved examples to https://github.com/Pcothren/DearPyGui-Examples

New Keywords:
- Line Series:    Added "xy_data_format" #246
- Scatter Series: Added "xy_data_format" #246
- Button:         Added "enabled"
- log:            Added "logger"
- log_debug:      Added "logger"
- log_error:      Added "logger"
- log_info:       Added "logger"
- log_warning:    Added "logger"
- clear_log:      Added "logger"
- get_log_level:  Added "logger"
- set_log_level:  Added "logger"
- input widgets:  Added "readonly" #254

Fixes:
- set_table_data: Fixed when less data is passed in than number of columns, now overwrites remaining row items with empty data #259
- Listbox:        Fixed default "num_items"
- Combobox:       Fixed hidden name issue #258
- File Dialog:    Fixed issue with typed filenames not returning #257

-----------------------------------------------------------------------
 VERSION 0.4.3 (10/01/2020)